--- a/.github/workflows/use-secrets.yml
+++ b/.github/workflows/use-secrets.yml
@@ -14,4 +14,4 @@ jobs:
         uses: ./.github/actions/check-secrets-action
         with:
           #secrets-context: ${{ toJSON(secrets) }}
-          your_secret: ${{ secrets.NAUGHTY_SECRET }}
+          your-secret: ${{ secrets.NAUGHTY_SECRET }}
