--- a/.github/workflows/use-secrets.yml
+++ b/.github/workflows/use-secrets.yml
@@ -13,5 +13,5 @@ jobs:
         id: check-secrets
         uses: ./.github/actions/check-secrets-action
         with:
-          #secrets-context: ${{ toJSON(secrets) }}
+          secrets-context: ${{ toJSON(secrets) }}
           your-secret: ${{ secrets.NAUGHTY_SECRET }}
